Update and rename BookReservation to BookReservation.html

--- a/HCI/HTMLs/BookReservation.html
+++ b/HCI/HTMLs/BookReservation.html
@@ -12,9 +12,9 @@
         <div class="left">
             <div class="box">
                 <div class="swipe">
-                    <img src="cover.png" alt="">
-                    <img src="back.jpg" alt="">
-                    <img src="inside.jpg" alt="">
+                    <img src="../fotoww/cover.png" alt="">
+                    <img src="../fotoww/back.jpg" alt="">
+                    <img src="../fotoww/inside.jpg" alt="">
                 </div>
             </div>
             <br>
