--- a/HCI/HTMLs/BookReservation.html
+++ b/HCI/HTMLs/BookReservation.html
@@ -62,10 +62,12 @@
             <br>
             <div class="button">
                 <button type="submit" class="reserve">Reservasi Buku</button>
-                <button type="submit" class="booking">Pinjam Sekarang</button>
+                <a href="Booking.html">
+                    <button type="submit" class="booking">Pinjam Sekarang</button>
+                </a>
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="../js/scriptbooking.js"></script>
 </body>
 </html>
