--- a/HCI/HTMLs/BookExtension.html
+++ b/HCI/HTMLs/BookExtension.html
@@ -11,9 +11,9 @@
         <div class="left">
             <div class="box">
                 <div class="swipe">
-                    <img src="../img/cover.png" alt="">
-                    <img src="../img/back.jpg" alt="">
-                    <img src="../img/inside.jpg" alt="">
+                    <img src="../fotoww/cover.png" alt="">
+                    <img src="../fotoww/back.jpg" alt="">
+                    <img src="../fotoww/inside.jpg" alt="">
                 </div>
             </div>
         </div>
