--- a/HCI/HTMLs/BookReservation.html
+++ b/HCI/HTMLs/BookReservation.html
@@ -62,9 +62,7 @@
             <br>
             <div class="button">
                 <button type="submit" class="reserve">Reservasi Buku</button>
-                <a href="Booking.html">
-                    <button type="submit" class="booking">Pinjam Sekarang</button>
-                </a>
+                <button type="submit" class="booking" onclick="window.location.href = 'Booking.html'">Pinjam Sekarang</button>
             </div>
         </div>
     </div>
