--- a/HCI/HTMLs/BookFavorite.html
+++ b/HCI/HTMLs/BookFavorite.html
@@ -4,42 +4,87 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Daftar Favorit</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../styles/favorite.css" />
 </head>
 <body>
-
-  <header>Daftar Favorit</header>
-
-  <div class="search-bar">
-    <div class="search-input">
-      <i>🔍</i>
-      <input type="text" placeholder="Search here..." id="searchInput">
+    <div class="container">
+        <h1>Daftar Favorit</h1>
+        <div class="search-bar">
+            <div class="search-input">
+                <i>🔍</i>
+                <input type="text" placeholder="Search here..." id="searchInput">
+            </div>
+        </div>
+        <div class="list" onclick="window.location.href='BookReservation.html'">
+            <h1></h1>
+            <div class="left">
+                <div class="book-list" id="bookList">
+                    <img src="../img/cover.png" alt="">
+                    <div class="vertical"></div>
+                    <div class="book-info">
+                        <h1>Laut Bercerita<span id="detailTitle"></span></h1>
+                        <br>
+                        <h2>Leila S. Chudori<span id="detailAuthor"></span></h2>
+                        <div class="Userstar">
+                            <span class="star">★</span><span class="rating">4.0 / 5</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tersedia">Tersedia</div>
+        </div>
+        <div class="list">
+            <div class="left">
+                <div class="book-list" id="bookList">
+                    <img src="../img/book-15.jpg" alt="">
+                    <div class="vertical"></div>
+                    <div class="book-info">
+                        <h1>Bintang<span id="detailTitle"></span></h1>
+                        <br>
+                        <h2>Tere Liye<span id="detailAuthor"></span></h2>
+                        <div class="Userstar">
+                            <span class="star">★</span><span class="rating">4.8 / 5</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tidak">Tidak Tersedia</div>
+        </div>
+        <div class="list">
+            <div class="left">
+                <div class="book-list" id="bookList">
+                    <img src="../img/book-20.jpg" alt="">
+                    <div class="vertical"></div>
+                    <div class="book-info">
+                        <h1>Selena<span id="detailTitle"></span></h1>
+                        <br>
+                        <h2>Tere Liye<span id="detailAuthor"></span></h2>
+                        <div class="Userstar">
+                            <span class="star">★</span><span class="rating">4.5 / 5</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tersedia">Tersedia</div>
+        </div>
+        <div class="list">
+            <div class="left">
+                <div class="book-list" id="bookList">
+                    <img src="../img/book-18.jpg" alt="">
+                    <div class="vertical"></div>
+                    <div class="book-info">
+                        <h1>Komet<span id="detailTitle"></span></h1>
+                        <br>
+                        <h2>Tere Liye<span id="detailAuthor"></span></h2>
+                        <div class="Userstar">
+                            <span class="star">★</span><span class="rating">3.8 / 5</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tersedia">Tersedia</div>
+        </div>
     </div>
-  </div>
-
-  <div class="book-list" id="bookList"></div>
-
-  <div class="add-form">
-    <input type="text" id="bookTitleInput" placeholder="Judul buku (tekan Enter)">
-    <button onclick="addBook()">Tambah</button>
-  </div>
-
-  <div class="detail-view" id="detailView">
-    <h2 id="detailTitle"></h2>
-    <p><strong>Penulis:</strong> <span id="detailAuthor"></span></p>
-    <p><strong>Rating:</strong> <span id="detailRating"></span></p>
-    <p><strong>Status:</strong> Tersedia</p>
-    <p><strong>Deskripsi:</strong> Ini adalah deskripsi singkat buku <span id="detailTitleText"></span> yang dapat disesuaikan.</p>
-    <button class="back-btn" onclick="showList()">← Kembali</button>
-  </div>
-
-  <footer>
-    <i>🏠</i>
-    <i>🔳</i>
-    <i>⏰</i>
-    <i>❤️</i>
-  </footer>
-
-  <script src="script.js"></script>
+    <script src="../js/scriptfavorite.js"></script>
 </body>
 </html>
