--- a/HCI/HTMLs/Bintang.html
+++ b/HCI/HTMLs/Bintang.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../styles/bookreserv.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    <header>
+<header>
         <div class="logo-toko">
             <img src="../fotoww/BookLend  Smart Borrowing.png" alt="" class="">
         </div>
@@ -43,7 +44,7 @@
                 </div>
                 <hr>
 
-                <div class="notif" onclick="window.location.href='BookExtension.html'">
+                 <div class="notif" onclick="window.location.href='BookExtension.html'">
                     <h3>Pengembalian Buku</h3>
                     <p>[REMINDER] H-2 Mengembalikan Buku Nebula. Klik disini jika ingin perpanjang.</p>
                 </div>
@@ -84,68 +85,57 @@
         </div>
     </header>
 
+
     <div class="container">
         <div class="left">
             <div class="box">
                 <div class="swipe">
-                    <img src="../fotoww/cover.png" alt="">
-                    <img src="../fotoww/back.jpg" alt="">
-                    <img src="../fotoww/inside.jpg" alt="">
+                    <img src="../fotoww/books/Tere-Liye/book-15.jpg" alt="">
+                    <img src="../fotoww/bintang.png" alt="">
                 </div>
             </div>
             <br>
+            <div class="Rcontainer">
+                <div class="rating"></div>
+                <div class="rating"></div>
+                <div class="rating"></div>
+                <div class="rating"></div>
+                <div class="rating"></div>
+                <br>
+                <div class="review" onclick="window.location.href='BintangRating.html'">(Liat Ulasan)</div>
+            </div>
         </div>
-
+        
         <div class="right">
-            <div class="feature">
-                <h1>Beri Ulasan</h1>
-            </div>
-            <br><br>
-            <h2>Ratings</h2>
-            <div class="line"></div>
-            <br>
-            <div class="rating-row">
-                <div class="name">Kualitas Buku</div>
-                <div class="Rcontainer" id="clicked-stars">
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
+            <div class="unavail">
+                <div class="boxB">
+                    Tidak Tersedia
                 </div>
-            </div>
-            <div class="rating-row">
-                <div class="name">Kualitas Bacaan</div>
-                <div class="Rcontainer" id="clicked-stars">
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                </div>
-            </div>
-            <div class="rating-row">
-                <div class="name">Keseluruhan</div>
-                <div class="Rcontainer" id="clicked-stars">
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                </div>
+                <i class="fa-regular fa-heart heart" id="heart" onclick="favorite(this)"></i>
             </div>
             <br>
-            <div class="name">Review</div>
-            <textarea rows="2" cols="40"></textarea>
-
-            <div class="end">
-                <div class="submit">
-                    <button id="submit" onclick="window.location.href='home.html'">Submit</button>
-                </div>
+            <h1>Bintang</h1>
+            <div class="scroll">
+                <br>
+                <h3>Tanggal Terbit: 10 April 2023</h3>
+                <h3>Penulis: Tere Liye</h3>
+                <h3>Penerbit: Gramedia Pustaka Utama</h3>
+                <h3>Jumlah Halaman: 395</h3>
+                <br>
+                <h4>Deskripsi: </h4>
+                <p>Namaku Raib, aku bisa menghilang. Seli, teman semejaku, bisa mengeluarkan petir
+                    dari telapak tangannya. Dan Ali, si biang kerok sekaligus si genius, bisa berubah
+                    menjadi beruang raksasa. Kmia bertiga kemudian bertualana ke dunia paralel yang
+                    tidak diketahui banyak orang, yang disebut Klan Bumi, Klan Bulan, Klan Matahari,
+                    dan Klan Bintang. Kami bertemu tokoh - tokoh hebat dan penduduk klan lainnya.</p>
+            </div>
+            <br>
+            <div class="button">
+                <button type="submit" class="reserve" onclick="window.location.href = 'home.html'">Reservasi Buku</button>
+                <button type="submit" class="nobooking" onclick="window.location.href = 'BintangBooking.html'">Pinjam Sekarang</button>
             </div>
         </div>
     </div>
-
-    <script src="../js/scriptrating.js"></script>
+    <script src="../js/scriptbooking.js"></script>
 </body>
 </html>
