--- a/HCI/HTMLs/LautBercerita.html
+++ b/HCI/HTMLs/LautBercerita.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../styles/bookreserv.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    <header>
+<header>
         <div class="logo-toko">
             <img src="../fotoww/BookLend  Smart Borrowing.png" alt="" class="">
         </div>
@@ -84,6 +85,7 @@
         </div>
     </header>
 
+
     <div class="container">
         <div class="left">
             <div class="box">
@@ -94,58 +96,54 @@
                 </div>
             </div>
             <br>
+            <div class="Rcontainer">
+                <div class="rating"></div>
+                <div class="rating"></div>
+                <div class="rating"></div>
+                <div class="rating"></div>
+                <div class="rating"></div>
+                <br>
+                <div class="review" onclick="window.location.href='LautBerceritaRating.html'">(Liat Ulasan)</div>
+            </div>
         </div>
-
+        
         <div class="right">
-            <div class="feature">
-                <h1>Beri Ulasan</h1>
-            </div>
-            <br><br>
-            <h2>Ratings</h2>
-            <div class="line"></div>
-            <br>
-            <div class="rating-row">
-                <div class="name">Kualitas Buku</div>
-                <div class="Rcontainer" id="clicked-stars">
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
+            <div class="avail">
+                <div class="boxA">
+                    Tersedia
                 </div>
-            </div>
-            <div class="rating-row">
-                <div class="name">Kualitas Bacaan</div>
-                <div class="Rcontainer" id="clicked-stars">
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                </div>
-            </div>
-            <div class="rating-row">
-                <div class="name">Keseluruhan</div>
-                <div class="Rcontainer" id="clicked-stars">
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                </div>
+                <i class="fa-regular fa-heart heart" id="heart" onclick="favorite(this)"></i>
             </div>
             <br>
-            <div class="name">Review</div>
-            <textarea rows="2" cols="40"></textarea>
-
-            <div class="end">
-                <div class="submit">
-                    <button id="submit" onclick="window.location.href='home.html'">Submit</button>
-                </div>
+            <h1>Laut Bercerita</h1>
+            <div class="scroll">
+                <br>
+                <h3>Tanggal Terbit: 21 Desember 2017</h3>
+                <h3>Penulis: Leila S. Chudori</h3>
+                <h3>Penerbit: Kepustakaan Populer Gramedia</h3>
+                <h3>Jumlah Halaman: 400</h3>
+                <br>
+                <h4>Deskripsi: </h4>
+                <p>Buku ini terdiri atas dua bagian. Bagian pertama mengambil sudut pandang seorang mahasiswa
+                    aktivis bernama Laut, menceritakan bagaimana Laut dan kawan-kawannya menyusun rencana,
+                    berpindah-pindah dalam pelarian, hingga tertangkap oleh pasukan rahasia. Sedangkan bagian
+                    kedua dikisahkan oleh Asmara, adik Laut. Bagian kedua mewakili perasaan keluarga korban
+                    penghilangan paksa, bagaimana pencarian mereka terhadap kerabat mereka yang tak pernah kembali.</p>
+                <p>Buku ini ditulis sebagai bentuk tribute bagi para aktivis yang diculik, yang kembali, dan yang
+                    tak kembali dan keluarga yang terus menerus sampai sekarang mencari-cari jawaban.</p>
+                <p>Novel ini merupakan perwujudan dalam bentuk fiksi bahwa kita sebagai bangsa Indonesia tidak boleh
+                    melupakan sejarah yang telah membentuk sekaligus menjadi tumpuan bangsa Ini. Novel ini juga
+                    mengajak pembaca menguak misteri-misteri bangsa ini yang mana tidak diajarkan di sekolah.
+                    Walaupun novel ini adalah fiksi, laut bercerita menunjukkan kepada pembaca bahwa negeri ini pernah
+                    memasuki masa pemerintahan yang kelam.</p>
+            </div>
+            <br>
+            <div class="button">
+                <button type="submit" class="reserve">Reservasi Buku</button>
+                <button type="submit" class="booking" onclick="window.location.href = 'LautBerceritaBooking.html'">Pinjam Sekarang</button>
             </div>
         </div>
     </div>
-
-    <script src="../js/scriptrating.js"></script>
+    <script src="../js/scriptbooking.js"></script>
 </body>
 </html>
