--- a/HCI/HTMLs/NebulaBooking.html
+++ b/HCI/HTMLs/NebulaBooking.html
@@ -88,64 +88,49 @@
         <div class="left">
             <div class="box">
                 <div class="swipe">
-                    <img src="../fotoww/cover.png" alt="">
-                    <img src="../fotoww/back.jpg" alt="">
-                    <img src="../fotoww/inside.jpg" alt="">
+                    <img src="../fotoww/books/Tere-Liye/book-21.jpg" alt="">
+                    <img src="../fotoww/nebula.png" alt="">
                 </div>
             </div>
-            <br>
+            <button type="submit" class="back" onclick="window.location.href='Nebula.html'">Back</button>
         </div>
 
         <div class="right">
             <div class="feature">
-                <h1>Beri Ulasan</h1>
+                <h1>Booking</h1>
             </div>
             <br><br>
-            <h2>Ratings</h2>
-            <div class="line"></div>
+            <h2>Tanggal Pengambilan</h2>
             <br>
-            <div class="rating-row">
-                <div class="name">Kualitas Buku</div>
-                <div class="Rcontainer" id="clicked-stars">
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                </div>
-            </div>
-            <div class="rating-row">
-                <div class="name">Kualitas Bacaan</div>
-                <div class="Rcontainer" id="clicked-stars">
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                </div>
-            </div>
-            <div class="rating-row">
-                <div class="name">Keseluruhan</div>
-                <div class="Rcontainer" id="clicked-stars">
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                    <div class="star">☆</div>
-                </div>
+            <div class="date">
+                <input type="date" name="pickup" id="pickup" onchange="borrowingLimit()">
             </div>
             <br>
-            <div class="name">Review</div>
-            <textarea rows="2" cols="40"></textarea>
+            <h2>Tanggal Pengembalian</h2>
+            <br>
+            <div class="date">
+                <input type="date" name="return" id="return" disabled>
+            </div>
+            <br><br>
+            <input type="checkbox" id="term1">
+            Saya memahami bahwa peminjaman buku dapat dibatalkan jika saya tidak hadir pada tanggal yang telah diinput di atas.
+            <br><br>
+            <input type="checkbox" id="term2">
+            Saya memahami bahwa saya akan terkena denda apabila tidak mengembalikan pada tanggal yang telah diinput di atas.
+            <div class="submit">
+                <button id="submit" onclick="showqr()">Submit</button>
+            </div>
 
-            <div class="end">
-                <div class="submit">
-                    <button id="submit" onclick="window.location.href='home.html'">Submit</button>
+            <div class="popup-bg" id="popup">
+                <div class="popup-box">
+                    <h3 class="phrase">Silahkan tunjukkan QR code ini kepada pegawai perpustakaan pada hari pengambilan.</h3>
+                    <img src="../fotoww/code.jpeg" alt="">
+                    <br>
+                    <button class="close" onclick="window.location.href='home.html'">X</button>
                 </div>
             </div>
         </div>
     </div>
-
-    <script src="../js/scriptrating.js"></script>
+    <script src="../js/scriptbooking.js"></script>
 </body>
 </html>
