--- a/HCI/HTMLs/sign-up.html
+++ b/HCI/HTMLs/sign-up.html
@@ -39,7 +39,7 @@
                 </label>
             </div>
             </div>
-            <button>Submit</button>
+            <button onclick="window.location.href='home.html'">Submit</button>
             <div class="si-post">
                 <p>Already have a account?
                     <a href="sign-in.html">Sign in</a>
